third commit by Kingtanda, added media query

--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
 
 <body>
     <div class="mySlides">
-        <div class="slide fade">
+        <div class="slide">
+            <p>1/6</p>
             <img src="Slide 1.jpg" alt="fine dining">
         </div>
-        <div class="slide fade">
+        <div class="slide">
+            <p>2/6</p>
             <img src="Slide 2.jpg" alt="pasta and pizza">
 
         </div>
-        <div class="slide fade">
+        <div class="slide">
+            <p>3/6</p>
             <img src="Slide 3.jpg" alt="seafood peppersoup">
 
         </div>
-        <div class="slide fade">
+        <div class="slide">
+            <p>4/6</p>
             <img src="Slide 4.jpg" alt="steak poached egg">
 
         </div>
-        <div class="slide fade">
+        <div class="slide">
+            <p>5/6</p>
             <img src="Slide 5.jpg" alt="pasta">
 
         </div>
-        <div class="slide fade">
+        <div class="slide">
+            <p>6/6</p>
             <img src="Slide 6.jpg" alt="stacked pancakes">
 
         </div>
@@ -38,14 +44,14 @@
         </a>
         <a class="next" onclick="plusSlides(1)"> &#8594; </a>
         <br>
-
+        <div class="btn">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
         <span class="dot" onclick="currentSlide(5)"></span>
         <span class="dot" onclick="currentSlide(6)"></span>
-
+    </div>
     </div>
     <script src="./slide.js"></script>
 </body>
